// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|updateAlphaProject complex mutations creates a new project with a simple PresentationStep, CollectStep that contains requirements and statuses and SelectionStep that contains statuses and then update the requirements and statuses positions 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "PresentationStep",
          "body": "Le beau body de l'étape PresentationStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape PresentationStep",
        },
        Object {
          "__typename": "CollectStep",
          "body": "Le beau body de l'étape CollectStep",
          "defaultSort": "random",
          "enabled": true,
          "form": Object {
            "title": "Formulaire attaché à aucun projet",
          },
          "id": Any<String>,
          "private": false,
          "requirements": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le deuxième requirement devenu premier de l'étape de dépôt",
                },
              },
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le premier requirement devenu deuxième de l'étape de dépôt",
                },
              },
            ],
            "totalCount": 2,
          },
          "statuses": Array [
            Object {
              "color": "warning",
              "id": Any<String>,
              "name": "Le troisième statut devenu premier de l'étape de dépôt",
            },
            Object {
              "color": "info",
              "id": Any<String>,
              "name": "Le premier statut devenu deuxième de l'étape de dépôt",
            },
            Object {
              "color": "danger",
              "id": Any<String>,
              "name": "Le deuxième statut devenu troisième de l'étape de dépôt",
            },
          ],
          "timeless": false,
          "title": "Le beau titre de l'étape CollectStep",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Le beau body de l'étape SelectionStep",
          "defaultSort": "random",
          "enabled": true,
          "id": Any<String>,
          "requirements": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "statuses": Array [
            Object {
              "color": "info",
              "id": Any<String>,
              "name": "Le deuxième statut devenu premier de l'étape de sélection",
            },
            Object {
              "color": "info",
              "id": Any<String>,
              "name": "Le premier statut devenu deuxième de l'étape de sélection",
            },
          ],
          "timeless": false,
          "title": "Le beau titre de l'étape SelectionStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|updateAlphaProject complex mutations update a newly created project and add a CollectStep that contains requirements and SelectionStep that contains statuses 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "CollectStep",
          "body": "Le beau body de l'étape CollectStep",
          "defaultSort": "random",
          "enabled": true,
          "form": Object {
            "title": "Formulaire attaché à aucun projet",
          },
          "id": Any<String>,
          "private": false,
          "requirements": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le premier requirement de l'étape de dépôt",
                },
              },
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le deuxième requirement de l'étape de dépôt",
                },
              },
            ],
            "totalCount": 2,
          },
          "statuses": Array [],
          "timeless": false,
          "title": "Le beau titre de l'étape CollectStep",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Le beau body de l'étape SelectionStep",
          "defaultSort": "random",
          "enabled": true,
          "id": Any<String>,
          "requirements": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "statuses": Array [
            Object {
              "color": "info",
              "id": Any<String>,
              "name": "Le premier statut de l'étape de sélection",
            },
            Object {
              "color": "info",
              "id": Any<String>,
              "name": "Le deuxième statut de l'étape de sélection",
            },
          ],
          "timeless": false,
          "title": "Le beau titre de l'étape SelectionStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|updateAlphaProject simple mutations update a newly created project and add a new CollectStep 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "CollectStep",
          "body": "Le beau body de l'étape CollectStep",
          "defaultSort": "random",
          "enabled": true,
          "form": Object {
            "title": "Formulaire attaché à aucun projet",
          },
          "id": Any<String>,
          "private": false,
          "requirements": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "statuses": Array [],
          "timeless": false,
          "title": "Le beau titre de l'étape CollectStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|updateAlphaProject simple mutations update a newly created project and add a new ConsultationStep 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "ConsultationStep",
          "body": "Le beau body de l'étape ConsultationStep",
          "consultations": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape ConsultationStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|updateAlphaProject simple mutations update a newly created project and add a new OtherStep 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "OtherStep",
          "body": "Le beau body de l'étape OtherStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape OtherStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|updateAlphaProject simple mutations update a newly created project and add a new PresentationStep 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "PresentationStep",
          "body": "Le beau body de l'étape PresentationStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape PresentationStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|updateAlphaProject simple mutations update a newly created project and add a new QuestionnaireStep 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "QuestionnaireStep",
          "body": "Le beau body de l'étape QuestionnaireStep",
          "enabled": true,
          "id": Any<String>,
          "questionnaire": null,
          "timeless": false,
          "title": "Le beau titre de l'étape QuestionnaireStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|updateAlphaProject simple mutations update a newly created project and add a new RankingStep 1`] = `
Object {
  "updateAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "steps": Array [
        Object {
          "__typename": "RankingStep",
          "body": "Le beau body de l'étape RankingStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape RankingStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;
